--- a/rscm/trunk/app/views/project/index.rhtml
+++ b/rscm/trunk/app/views/project/index.rhtml
@@ -4,7 +4,7 @@
   </tr>
 <% @projects.each do |project| %>
   <tr>
-    <td align="left"><%= link_to(project.name, :controller => "project", :action => "view", :id => project.name) %></td>
+    <td align="left"><%= link_to(project.name, {:controller => "project", :action => "view", :id => project.name}) %></td>
   </tr>
 <% end %>
 </table>
