Added some checkout and funky javascript to see updates as they happen. Needs more work.

--- a/rscm/trunk/app/views/project/_project.rhtml
+++ b/rscm/trunk/app/views/project/_project.rhtml
@@ -32,3 +32,5 @@
   <td><input name="RSCM::Project[rss_enabled]" type="checkbox" <%= project.rss_enabled ? "checked=true" : "" %> /></td>
 </tr>
 </table>
+
+<%= link_to(:controller => "scm", :action => "checkout") %>
