--- a/rscm/trunk/app/views/scm/checkout_status.rhtml
+++ b/rscm/trunk/app/views/scm/checkout_status.rhtml
@@ -1,4 +1,6 @@
 <script>
+var nl = /\n/gi;
+
 var req;
 
 function loadXMLDoc(url) {
@@ -22,8 +24,10 @@ function processReqChange() {
     if (req.readyState == 4) {
         // only if "OK"
         if (req.status == 200) {
-            var checkout_list = document.getElementById('checkout_list')
-            checkout_list.value = req.responseText
+            var checkout_list = window.frames['checkout_list']
+            checkout_list.document.body.innerHTML = req.responseText.replace(nl, "<br>")
+            checkout_list.scrollBy(0, 3000)
+
             setTimeout("loadXMLDoc('<%= @checkout_list_path %>')", 1000)
         } else {
             alert("There was a problem retrieving the XML data:\n" +
@@ -37,5 +41,4 @@ function executeOnLoad() {
 }
 </script>
 
-<textarea id="checkout_list" rows="20" cols="80">We'll see some checked out files here soon.....
-</textarea>
+<iframe id="checkout_list" name="checkout_list" rows="20" cols="120">Your browser doesn't support IFRAME.</iframe>
