--- a/rscm/trunk/app/views/project/index.rhtml
+++ b/rscm/trunk/app/views/project/index.rhtml
@@ -1,10 +1,12 @@
 <table id="projectstatus" class="pane">
   <tr>
     <th align="left">Project</th>
+    <th align="left">RSS</th>
   </tr>
 <% @projects.each do |project| %>
   <tr>
     <td align="left"><%= link_to(project.name, {:controller => "project", :action => "view", :id => project.name}) %></td>
+    <td align="left"><%= link_to_image("rssbadge.gif", :action => "rss", :id => project.name) %></td>
   </tr>
 <% end %>
 </table>
