--- a/rscm/trunk/app/views/project/view.rhtml
+++ b/rscm/trunk/app/views/project/view.rhtml
@@ -32,7 +32,7 @@ trackers = [
 
 // -->
 </script>
-
+<%= link_to_image("rssbadge.gif", :action => "rss", :id => @project.name) %>
 <ul id="foldertab">
   <li><a href="javascript:showElement('project_tab', tabs)"><img src="/images/16x16/wrench.png"> General</a></li>
   <li><a href="javascript:showElement('scm_tab', tabs)"><img src="/images/16x16/safe.png"> Source Control</a></li>
