--- a/rscm/trunk/app/views/project/index.rhtml
+++ b/rscm/trunk/app/views/project/index.rhtml
@@ -1,7 +1,7 @@
 <table id="projectstatus" class="pane">
   <tr>
     <th align="left">Project</th>
-    <th align="left">RSS</th>
+    <th align="left">Changeset RSS</th>
   </tr>
 <% @projects.each do |project| %>
   <tr>
