--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -3,10 +3,11 @@
     <title>RSCM</title>
     <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
     <script>
+
 // http://developer.irt.org/script/1428.htm - add timezone
 function intercept(a) {
   if(a.href.indexOf('?') == -1) a.href += '?'; else a.href += '&';
-  a.href += 'timezone=' + new Date().getTimezoneOffset()
+  a.href += 'timezone=' + new Date().getTimezoneOffset() + '&tab=' + stickyTab
 }
     </script>
   </head>
@@ -20,7 +21,7 @@ function intercept(a) {
   </tr>
   <tr id="top-nav">
     <td id="left-top-nav">
-      <%= link_to("Home") + @controller.breadcrumbs.collect { |p| link_to(p) }.join(" > ") %>
+      <%= "TODO: breadcrumbs here" %>
     </td>
   </tr>
 </table>
@@ -30,8 +31,11 @@ function intercept(a) {
 
 <td id="side-panel" width="20%">
   <div id="tasks">  
-    <% @tasks.each do |task| %>
-      <div class="task"><%= task %></div>
+    <% @sidebar_links.each do |link| 
+      image = link.delete(:image)
+      name  = link.delete(:name)
+    %>
+      <div class="task"><%= link_to_image(image, link) %> <%= link_to(name, link) %></div>
     <% end %>  
   </div>
 </td>
@@ -49,5 +53,9 @@ This stuff displays best in a Mozilla based browser. Try <a href="http://www.moz
 
 </table>
 
+<!-- These scripts must be inside or after the body tag since they check for the presence of document.body -->
+<script src="/javascripts/dw_tooltip.js" type="text/javascript"></script>
+<script src="/javascripts/dw_event.js" type="text/javascript"></script>
+<script src="/javascripts/dw_viewport.js" type="text/javascript"></script>
 </body>
 </html>
