--- a/rscm/trunk/app/views/project/_cvs.rhtml
+++ b/rscm/trunk/app/views/project/_cvs.rhtml
@@ -103,16 +103,24 @@ function enableOrDisableCvsFields() {
 		document.getElementById('cvsport').disabled = false
 	}
 }
+
+var scm_password_tip = "<div class='tp1'><b>Warning!</b> Password will be shown in cleartext in configuration files.</div>";
+// not displayed yet - not appropriate for rscm...
+var cvs_mod_tip  = "<div class='tp1'>Note that you can't use trigged build if you are using DC to build multiple branches for the same project, use polling instead.</div>";
+
 </script>
 
-<img src="images/cvs.png"/>
+<!--img src="images/cvs.png"/-->
 <table width="100%">
   <tr>
-    <td class="setting-name">CVSROOT</td>
-    <td width="75%"><input class="setting-input" name="RSCM::CVS[root]" id="cvsroot" onKeyUp="cvs_init()" type="text" value="<%= cvs.root %>"></td>
+    <td width="25%" class="setting-name">CVSROOT</td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::CVS[root]", :value => cvs.root, :onKeyUp => "cvs_init()", :id => "cvsroot") %></td>
   </tr>
+<% if(@edit) %>
   <tr>
     <td>Protocol</td>
+    <td>&nbsp;</td>
     <td>
       <select class="setting-input" id="cvsprotocol" onchange="updateCvsRootField()">
         <option value=""></option>
@@ -124,53 +132,46 @@ function enableOrDisableCvsFields() {
   </tr>
   <tr>
     <td>&nbsp;</td>
+    <td>&nbsp;</td>
     <td class="setting-description">
       If you specify :local: DamageControl can create the repository for you after you save (unless the repository already exists).
     </td>
   </tr>
   <tr>
     <td>User name</td>
-    <td><input class="setting-input" id="cvsuser" onKeyUp="updateCvsRootField()" type="text"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :onKeyUp => "updateCvsRootField()", :id => "cvsuser") %></td>
   </tr>
   <tr>
     <td>Password</td>
-    <td><input class="setting-input" name="RSCM::CVS[password]" id="cvspassword" value="<%= cvs.password %>" type="password"></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td class="setting-description">
-      <b>Warning!</b> Password will be shown in cleartext in configuration files.
-    </td>
+    <td><%= tip(:txt => 'scm_password_tip') %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::CVS[password]", :onKeyUp => "updateCvsRootField()", :id => "cvspassword") %></td>
   </tr>
   <tr>
     <td>Server</td>
-    <td><input class="setting-input" id="cvsserver" onKeyUp="updateCvsRootField()" type="text"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :onKeyUp => "updateCvsRootField()", :id => "cvsserver") %></td>
   </tr>
   <tr>
     <td>Port</td>
-    <td><input class="setting-input" id="cvsport" onKeyUp="updateCvsRootField()" type="text"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :onKeyUp => "updateCvsRootField()", :id => "cvsport") %></td>
   </tr>
   <tr>
     <td>Repository directory</td>
-    <td><input class="setting-input" id="cvsrepodir" onKeyUp="updateCvsRootField()" type="text"></td>
-  </tr>
-  <tr>
     <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :onKeyUp => "updateCvsRootField()", :id => "cvsrepodir") %></td>
   </tr>
+<% end %>
   <tr>
     <td>Module</td>
-    <td><input class="setting-input" name="RSCM::CVS[mod]" id="cvsmodule" type="text" value="<%= cvs.mod %>"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::CVS[mod]", :value => cvs.mod, :id => "cvsmodule") %></td>
   </tr>
   <tr>
     <td>Branch</td>
-    <td><input class="setting-input" name="RSCM::CVS[branch]" id="cvsbranch" type="text" value="<%= cvs.branch %>"></td>
-  </tr>
-  <tr>
     <td>&nbsp;</td>
-    <td class="setting-description">
-      Note that you can't use trigged build if you are using DC to build multiple branches for the same project,
-      use polled builds instead.
-    </td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::CVS[branch]", :value => cvs.branch, :id => "cvsmodule") %></td>
   </tr>
 </table>
 
