--- a/rscm/trunk/app/views/project/_starteam.rhtml
+++ b/rscm/trunk/app/views/project/_starteam.rhtml
@@ -2,41 +2,41 @@
 function starteam_init() {}
 </script>
 
-<img src="images/starteam.png"/>
-<%= @scms.class.name %>
+<!--img src="images/starteam.png"/-->
 <table width="100%">
   <tr>
-    <td class="config_cell">User name</td>
-    <td width="75%"><input class="setting-input" name="RSCM::StarTeam[user_name]" type="text" value="<%= starteam.user_name %>"></td>
+    <td width="25%" class="config_cell">User name</td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[user_name]", :value => starteam.user_name) %></td>
   </tr>
   <tr>
     <td class="config_cell">Password</td>
-    <td><input class="setting-input" name="RSCM::StarTeam[password]" type="password" value="<%= starteam.password %>"></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td class="setting-description">
-      <b>Warning!</b> Password will be shown in cleartext in configuration files.
-    </td>
+    <td><%= tip(:txt => 'scm_password_tip') %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[password]", :value => starteam.password) %></td>
   </tr>
   <tr>
     <td class="config_cell">Server name</td>
-    <td><input class="setting-input" name="RSCM::StarTeam[server_name]" type="text" value="<%= starteam.server_name %>"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[server_name]", :value => starteam.server_name) %></td>
   </tr>
   <tr>
     <td class="config_cell">Server port</td>
-    <td><input class="setting-input" name="RSCM::StarTeam[server_port]" type="text" value="<%= starteam.server_port %>"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[server_port]", :value => starteam.server_port) %></td>
   </tr>
   <tr>
     <td class="config_cell">Project name</td>
-    <td><input class="setting-input" name="RSCM::StarTeam[project_name]" type="text" value="<%= starteam.project_name %>"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[project_name]", :value => starteam.project_name) %></td>
   </tr>
   <tr>
     <td class="config_cell">View name</td>
-    <td><input class="setting-input" name="RSCM::StarTeam[view_name]" type="text" value="<%= starteam.view_name %>"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[view_name]", :value => starteam.view_name) %></td>
   </tr>
   <tr>
     <td class="config_cell">Folder name</td>
-    <td><input class="setting-input" name="RSCM::StarTeam[folder_name]" type="text" value="<%= starteam.folder_name %>"></td>
+    <td>&nbsp;</td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[folder_name]", :value => starteam.folder_name) %></td>
   </tr>
 </table>
