--- a/rscm/trunk/app/views/project/_svn.rhtml
+++ b/rscm/trunk/app/views/project/_svn.rhtml
@@ -1,32 +1,21 @@
 <script>
 function svn_init() {}
+
+var svn_url_tip = "<div class='tp1'>If you specify a local URL (starting with file://) DamageControl can create the repository for you after you save (unless the repository already exists).<br>Using a file:// URL will also give you the option to have DamageControl install a trigger in Subversion, so that you don't have to use polling to detect changes.<br>On Windows, file URLs must look like file:///C:/jupiter/mars</div>";
+var svn_path_tip = "<div class='tp1'>This is the relative path from the start of the repository <br>to the end of the URL. For example, if your URL is <br>svn://your.server/path/to/repository/path/within/repository <br>then this value should be path/within/repository.</div>";
+
 </script>
 
-<img src="images/svnlogo64.png"/>
+<!--img src="images/svnlogo64.png"/-->
 <table width="100%">
   <tr>
-    <td class="config_cell">Url</td>
-    <td width="75%"><input class="setting-input" name="RSCM::SVN[url]" type="text" value="<%= svn.url %>"></td>
+    <td width="25%" class="config_cell">Url</td>
+    <td><%= tip(:txt => 'svn_url_tip') %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::SVN[url]", :value => svn.url) %></td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td class="setting-description">
-      If you specify a local URL (starting with file://) DamageControl can create the repository for you after you save (unless the repository already exists).<br>
-      Using a file:// URL will also give you the option to have DamageControl install a trigger in Subversion,
-      so that you don't have to use polling to detect changes.<br>
-      On Windows, file URLs must look like file:///C:/jupiter/mars
-    </td>
-  </tr>
-  <tr>
-    <td class="config_cell">Directory</td>
-    <td><input class="setting-input" name="RSCM::SVN[path]" type="text" value="<%= svn.path %>"></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td class="setting-description">
-      This is the relative path from the start of the repository to the end of the URL. Example:
-      if your URL is svn://your.server/path/to/repository/path/within/repository then this value
-      should be path/within/repository
-    </td>
+    <td width="25%" class="config_cell">Directory</td>
+    <td><%= tip(:txt => 'svn_path_tip') %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::SVN[path]", :value => svn.path) %></td>
   </tr>
 </table>
