--- a/rscm/trunk/app/views/project/_cvs.rhtml
+++ b/rscm/trunk/app/views/project/_cvs.rhtml
@@ -110,7 +110,6 @@ var cvs_mod_tip  = "<div class='tp1'>Note that you can't use trigged build if yo
 
 </script>
 
-<!--img src="images/cvs.png"/-->
 <table width="100%">
   <tr>
     <td width="25%" class="setting-name">CVSROOT</td>
@@ -175,3 +174,4 @@ var cvs_mod_tip  = "<div class='tp1'>Note that you can't use trigged build if yo
   </tr>
 </table>
 
+<img src="/images/cvs.png"/>
