--- a/rscm/trunk/app/views/project/_starteam.rhtml
+++ b/rscm/trunk/app/views/project/_starteam.rhtml
@@ -2,7 +2,6 @@
 function starteam_init() {}
 </script>
 
-<!--img src="images/starteam.png"/-->
 <table width="100%">
   <tr>
     <td width="25%" class="config_cell">User name</td>
@@ -40,3 +39,5 @@ function starteam_init() {}
     <td width="75%"><%= text_or_input(@edit, :name => "RSCM::StarTeam[folder_name]", :value => starteam.folder_name) %></td>
   </tr>
 </table>
+
+<img src="/images/starteam.png"/>
