--- a/rscm/trunk/app/views/project/_svn.rhtml
+++ b/rscm/trunk/app/views/project/_svn.rhtml
@@ -6,7 +6,6 @@ var svn_path_tip = "<div class='tp1'>This is the relative path from the start of
 
 </script>
 
-<!--img src="images/svnlogo64.png"/-->
 <table width="100%">
   <tr>
     <td width="25%" class="config_cell">Url</td>
@@ -19,3 +18,5 @@ var svn_path_tip = "<div class='tp1'>This is the relative path from the start of
     <td width="75%"><%= text_or_input(@edit, :name => "RSCM::SVN[path]", :value => svn.path) %></td>
   </tr>
 </table>
+
+<img src="/images/svnlogo64.png"/>
