Improved display of changesets

--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -47,6 +47,10 @@ function intercept(a) {
     <% end %>  
   <% end %>  
   </div>
+
+  <div id="navigation">  
+    <%= render_partial(@navigation_name, nil) %>
+  </div>
 </td>
 
 <td id="main-panel" width="80%" height="100%">
