--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -49,7 +49,7 @@ function intercept(a) {
   </div>
 
   <div id="navigation">  
-    <%= render_partial(@navigation_name, nil) %>
+    <%= render_partial(@navigation_name, nil) if @navigation_name %>
   </div>
 </td>
 
@@ -70,5 +70,8 @@ This stuff displays best in a Mozilla based browser. Try <a href="http://www.moz
 <script src="/javascripts/dw_tooltip.js" type="text/javascript"></script>
 <script src="/javascripts/dw_event.js" type="text/javascript"></script>
 <script src="/javascripts/dw_viewport.js" type="text/javascript"></script>
+<!--[if gte IE 5.5000]>
+<script type="text/javascript" src="/javascripts/pngfix.js"></script>
+<![endif]-->
 </body>
 </html>
