--- a/rscm/trunk/app/views/project/_changesets_list.rhtml
+++ b/rscm/trunk/app/views/project/_changesets_list.rhtml
@@ -14,20 +14,17 @@
 <% else %>
 
   <%
-    max_changeset_ids = 20
-    visible_changeset_ids = changeset_ids[0..max_changeset_ids - 1]
-    select_changeset_ids = changeset_ids[max_changeset_ids..-1]
-    visible_changeset_ids.each do |changeset|
+    @linkable_changesets.reverse.each do |changeset|
   %>
   <tr class="build-row">
     <td nowrap="nowrap">
-      <%= link_to(changeset, :action => "changesets", :id => @project.name, :params => {"changeset" => changeset}) %>
+      <%= link_to("#{changeset.id} (#{changeset.developer})", :action => "changesets", :id => @project.name, :params => {"changeset" => changeset.id}) %>
     </td>
   </tr>
   
   <% end %>
 
-  <% if(select_changeset_ids && !select_changeset_ids.empty?) %>
+  <% if(!@select_changeset_ids.empty?) %>
     <tr class="build-row">
       <td class="build-cell-even">
         <form method="get" action="<%= url_for(:action => "changesets", :id => @project.name) %>">
@@ -35,9 +32,9 @@
           <select name="changeset" onchange="submit()">
           
           <%
-            select_changeset_ids.each do |changeset|
+            @select_changeset_ids.reverse.each do |changeset_id|
           %>
-            <option value="<%= changeset %>"><%= changeset %></option>      
+            <option value="<%= changeset_id %>"><%= changeset_id %></option>      
           <% end %>
           
           </select>
