Integrated colour html diffs with webapp. Currently disabled, will enable it again as soon as visitors are introduced for changesets.

--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -2,6 +2,7 @@
   <head>
     <title>RSCM</title>
     <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
+    <link type="text/css" rel="stylesheet" href="/stylesheets/diff.css">
     <script>
 
 // http://developer.irt.org/script/1428.htm - add timezone
