input area for project homepage fixed

--- a/rscm/trunk/app/views/project/_project.rhtml
+++ b/rscm/trunk/app/views/project/_project.rhtml
@@ -22,7 +22,7 @@ var project_description_tip = "<div class='tp1'>A short description of the proje
   <td><%= text_or_input(@edit, :name => "RSCM::Project[description]", :value => project.description) %></td>
 </tr>
 <tr>
-  <td>Project home page</td>
+  <td colspan="2">Project home page</td>
   <td><%= text_or_input(@edit, :name => "RSCM::Project[home_page]", :value => project.home_page) %></td>
 </tr>
 </table>
