--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>RSCM</title>
+    <script src="/javascripts/toggle_diff.js" type="text/javascript"></script>
     <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
     <link type="text/css" rel="stylesheet" href="/stylesheets/diff.css">
     <script>
