--- a/rscm/trunk/app/views/project/changesets.rhtml
+++ b/rscm/trunk/app/views/project/changesets.rhtml
@@ -26,7 +26,21 @@
         <td width="5%"><%= tag("img", :src => change.icon) %></td>
         <td width="5%"><%= change.revision %></td>
         <td width="90%">
-          <%= link_to(change.path, :controller => "scm", :action => "diff", :id => @project.name, :params => {"path" => change.path, "changeset" => changeset.id}) %>
+          <a class="diff-toggle" href="#" onclick="toggleCode('<%= change.path %>');return false"><%= change.path %></a>
+          <br>
+          <%
+            html_diff = ""
+            dp = RSCM::DiffParser.new
+            diff_file = RSCM::Directories.diff_file(@project.name, changeset, change)
+            File.open(diff_file) do |diffs_io|
+              diffs = dp.parse_diffs(diffs_io)
+              dh = RSCM::DiffHtmlizer.new(html_diff)
+              diffs.accept(dh)
+            end
+          %>
+          <div class="diff" id="<%= change.path %>">
+          <%= html_diff %>
+          </div>
         </td>
       </tr>
     <% end %>
