Improved layout and logging

--- a/rscm/trunk/app/views/project/_project.rhtml
+++ b/rscm/trunk/app/views/project/_project.rhtml
@@ -23,7 +23,7 @@ var project_home_page_tip = "<div class='tp1'>URL to the project's home page or 
   <td><%= text_or_input(@edit, :name => "RSCM::Project[description]", :value => project.description) %></td>
 </tr>
 <tr>
-  <td colspan="2">Project home page</td>
+  <td>Project home page</td>
   <td><%= tip(:txt => 'project_home_page_tip') %></td>
   <td><%= text_or_input(@edit, :name => "RSCM::Project[home_page]", :value => project.home_page) %></td>
 </tr>
