--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -61,7 +61,7 @@ function intercept(a) {
 
 </tr>
 
-<tr><td id="footer" colspan="2" background="images/footer_grad.gif">
+<tr><td id="footer" colspan="2" background="/images/footer.gif">
 This stuff displays best in a Mozilla based browser. Try <a href="http://www.mozilla.org/products/firefox/">Firefox</a>.
 <br>
 </td></tr>
